--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "OKC Streetcar tracker",
   "main": "eventproxy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"start": "node eventproxy.js"
   },
   "keywords": [
     "streetcar",
