--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
 	"start": "node eventproxy.js"
   },
+  "dependencies": {
+  	"express": "^4.16.4",
+  	"eventsource": "^1.0.7"
+  }
   "keywords": [
     "streetcar",
     "bendyboi",
