--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bendyboi",
+  "name": "okcstreetcar",
   "version": "0.1.0",
   "description": "OKC Streetcar tracker",
   "main": "eventproxy.js",
@@ -13,6 +13,8 @@
   },
   "keywords": [
     "streetcar",
+    "oklahoma",
+    "okc",
     "bendyboi",
     "heroku"
   ],
