Make changes to make frontend js source compilable as a webpack module. Also implement debug mode on eventproxy.js (so we can send fake output through /eta).

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "heroku"
   ],
   "author": "michael ottinger",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
+  }
 }
